web components updated

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <html>
-    <head>
-        <script src="node_modules/webcomponents.js/webcomponents.js"></script>
-        <meta charset="utf-8">
-    </head>
-    <body>
+<head>
+    <script src="node_modules/webcomponents.js/webcomponents.js"></script>
+    <!--<script src="bower_components/angular/angular.js"></script>-->
+    <link rel="import" href="https://www.polymer-project.org/0.5/components/polymer/polymer.html">
+    <meta charset="utf-8">
+</head>
+<body>
 
+<polymer-element name="img-slider" noscript>
 
-        <template id="videoContainerTemplate">
+    <template>
+        <div class="img-slider container">
             <style>
                 * {
                     -webkit-box-sizing: border-box;
@@ -14,150 +18,284 @@
                     -ms-box-sizing: border-box;
                     box-sizing: border-box;
                 }
-
-                input.url {
-                    width: 600px;
-                    text-align: center;
-                    margin: 0 auto;
-                    display: block;
-                    margin-bottom: 5px;
-                }
-                video{
-                    width: 600px;
-                    text-align: center;
-                    margin: 0 auto;
-                    display: block;
-                }
                 .container{
                     border: 1px dashed greenyellow;
                 }
+                #slider {
+                    max-width: 600px;
+                    text-align: center;
+                    margin: 0 auto;
+                }
+
+                #overflow {
+                    width: 100%;
+                    overflow: hidden;
+                }
+
+                #slides .inner {
+                    width: 400%;
+                }
+
+                #slides .inner {
+                    -webkit-transform: translateZ(0);
+                    -moz-transform: translateZ(0);
+                    -o-transform: translateZ(0);
+                    -ms-transform: translateZ(0);
+                    transform: translateZ(0);
+
+                    -webkit-transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+                    -moz-transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+                    -o-transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+                    -ms-transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+                    transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+
+                    -webkit-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
+                    -moz-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
+                    -o-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
+                    -ms-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
+                    transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
+                }
+
+                #slides img {
+                    width: 25%;
+                    float: left;
+                }
+
+                #slide1:checked ~ #slides .inner {
+                    margin-left: 0;
+                }
+
+                #slide2:checked ~ #slides .inner {
+                    margin-left: -100%;
+                }
+
+                #slide3:checked ~ #slides .inner {
+                    margin-left: -200%;
+                }
+
+                #slide4:checked ~ #slides .inner {
+                    margin-left: -300%;
+                }
+
+                input[type="radio"] {
+                    display: none;
+                }
+
+                label {
+                    background: #CCC;
+                    display: inline-block;
+                    cursor: pointer;
+                    width: 10px;
+                    height: 10px;
+                    border-radius: 5px;
+                }
+
+                #slide1:checked ~ label[for="slide1"],
+                #slide2:checked ~ label[for="slide2"],
+                #slide3:checked ~ label[for="slide3"],
+                #slide4:checked ~ label[for="slide4"] {
+                    background: #333;
+                }
             </style>
-            <div class="container">
-                <input class="url" type="text" placeholder="Type in video link">
-                <video controls>
-                    <source src="app/resources/videos/small.webm" type="video/webm">
-                    <source src="app/resources/videos/small.mp4" type="video/mp4">
-                    <source src="app/resources/videos/small.ogv" type="video/ogg">
-                </video>
-            </div>
-
-        </template>
-
-        <template id="sliderTemplate">
-            <div class="img-slider container">
-                <style>
-                    * {
-                        -webkit-box-sizing: border-box;
-                        -moz-box-sizing: border-box;
-                        -ms-box-sizing: border-box;
-                        box-sizing: border-box;
-                    }
-                    .container{
-                        border: 1px dashed greenyellow;
-                    }
-                    #slider {
-                        max-width: 600px;
-                        text-align: center;
-                        margin: 0 auto;
-                    }
-
-                    #overflow {
-                        width: 100%;
-                        overflow: hidden;
-                    }
-
-                    #slides .inner {
-                        width: 400%;
-                    }
-
-                    #slides .inner {
-                        -webkit-transform: translateZ(0);
-                        -moz-transform: translateZ(0);
-                        -o-transform: translateZ(0);
-                        -ms-transform: translateZ(0);
-                        transform: translateZ(0);
-
-                        -webkit-transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
-                        -moz-transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
-                        -o-transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
-                        -ms-transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
-                        transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
-
-                        -webkit-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
-                        -moz-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
-                        -o-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
-                        -ms-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
-                        transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
-                    }
-
-                    #slides img {
-                        width: 25%;
-                        float: left;
-                    }
-
-                    #slide1:checked ~ #slides .inner {
-                        margin-left: 0;
-                    }
-
-                    #slide2:checked ~ #slides .inner {
-                        margin-left: -100%;
-                    }
-
-                    #slide3:checked ~ #slides .inner {
-                        margin-left: -200%;
-                    }
-
-                    #slide4:checked ~ #slides .inner {
-                        margin-left: -300%;
-                    }
-
-                    input[type="radio"] {
-                        display: none;
-                    }
-
-                    label {
-                        background: #CCC;
-                        display: inline-block;
-                        cursor: pointer;
-                        width: 10px;
-                        height: 10px;
-                        border-radius: 5px;
-                    }
-
-                    #slide1:checked ~ label[for="slide1"],
-                    #slide2:checked ~ label[for="slide2"],
-                    #slide3:checked ~ label[for="slide3"],
-                    #slide4:checked ~ label[for="slide4"] {
-                        background: #333;
-                    }
-                </style>
-                <div id="slider">
-                    <input checked="" type="radio" name="slider" id="slide1" selected="false">
-                    <input type="radio" name="slider" id="slide2" selected="false">
-                    <input type="radio" name="slider" id="slide3" selected="false">
-                    <input type="radio" name="slider" id="slide4" selected="false">
-                    <div id="slides">
-                        <div id="overflow">
-                            <div class="inner">
-                                <img src="./app/resources/images/rock.jpg">
-                                <img src="./app/resources/images/grooves.jpg">
-                                <img src="./app/resources/images/arch.jpg">
-                                <img src="./app/resources/images/sunset.jpg">
-                            </div> <!-- .inner -->
-                        </div> <!-- #overflow -->
-                    </div>
-                    <label for="slide1"></label>
-                    <label for="slide2"></label>
-                    <label for="slide3"></label>
-                    <label for="slide4"></label>
+            <div id="slider">
+                <input checked="" type="radio" name="slider" id="slide1" selected="false">
+                <input type="radio" name="slider" id="slide2" selected="false">
+                <input type="radio" name="slider" id="slide3" selected="false">
+                <input type="radio" name="slider" id="slide4" selected="false">
+                <div id="slides">
+                    <div id="overflow">
+                        <div class="inner">
+                            <content select="img"></content>
+                        </div> <!-- .inner -->
+                    </div> <!-- #overflow -->
                 </div>
+                <label for="slide1"></label>
+                <label for="slide2"></label>
+                <label for="slide3"></label>
+                <label for="slide4"></label>
             </div>
-        </template>
+        </div>
+    </template>
+</polymer-element>
 
-        <video-container></video-container>
-        <br>
-        <image-slider></image-slider>
+<template id="videoContainerTemplate">
+    <style>
+        * {
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            -ms-box-sizing: border-box;
+            box-sizing: border-box;
+        }
 
-        <script type="text/javascript" src="dist/bundle.js" charset="utf-8"></script>
-    </body>
+        input.url {
+            width: 600px;
+            text-align: center;
+            margin: 0 auto;
+            display: block;
+            margin-bottom: 5px;
+        }
+        video{
+            width: 600px;
+            text-align: center;
+            margin: 0 auto;
+            display: block;
+        }
+        .container{
+            border: 1px dashed greenyellow;
+        }
+    </style>
+    <!--<div id="main">-->
+        <!--<div ng-controller="MyController">-->
+            <!--Hello {{greetMe}}!-->
+        <!--</div>-->
+    <!--</div>-->
+    <div class="container">
+        <input class="url" type="text" placeholder="Type in video link">
+        <video controls>
+            <source src="app/resources/videos/small.webm" type="video/webm">
+            <source src="app/resources/videos/small.mp4" type="video/mp4">
+            <source src="app/resources/videos/small.ogv" type="video/ogg">
+        </video>
+    </div>
+
+
+    <!--<script>-->
+        <!--angular.module('myApp', [])-->
+                <!--.controller('MyController', ['$scope', function ($scope) {-->
+                    <!--$scope.greetMe = 'World';-->
+                <!--}]);-->
+
+        <!--angular.element(document).ready(function() {-->
+            <!--angular.bootstrap(document, ['myApp']);-->
+        <!--});-->
+    <!--</script>-->
+
+</template>
+
+<template id="sliderTemplate">
+    <div class="img-slider container">
+        <style>
+            * {
+                -webkit-box-sizing: border-box;
+                -moz-box-sizing: border-box;
+                -ms-box-sizing: border-box;
+                box-sizing: border-box;
+            }
+            .container{
+                border: 1px dashed greenyellow;
+            }
+            #slider {
+                max-width: 600px;
+                text-align: center;
+                margin: 0 auto;
+            }
+
+            #overflow {
+                width: 100%;
+                overflow: hidden;
+            }
+
+            #slides .inner {
+                width: 400%;
+            }
+
+            #slides .inner {
+                -webkit-transform: translateZ(0);
+                -moz-transform: translateZ(0);
+                -o-transform: translateZ(0);
+                -ms-transform: translateZ(0);
+                transform: translateZ(0);
+
+                -webkit-transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+                -moz-transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+                -o-transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+                -ms-transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+                transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+
+                -webkit-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
+                -moz-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
+                -o-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
+                -ms-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
+                transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
+            }
+
+            #slides img {
+                width: 25%;
+                float: left;
+            }
+
+            #slide1:checked ~ #slides .inner {
+                margin-left: 0;
+            }
+
+            #slide2:checked ~ #slides .inner {
+                margin-left: -100%;
+            }
+
+            #slide3:checked ~ #slides .inner {
+                margin-left: -200%;
+            }
+
+            #slide4:checked ~ #slides .inner {
+                margin-left: -300%;
+            }
+
+            input[type="radio"] {
+                display: none;
+            }
+
+            label {
+                background: #CCC;
+                display: inline-block;
+                cursor: pointer;
+                width: 10px;
+                height: 10px;
+                border-radius: 5px;
+            }
+
+            #slide1:checked ~ label[for="slide1"],
+            #slide2:checked ~ label[for="slide2"],
+            #slide3:checked ~ label[for="slide3"],
+            #slide4:checked ~ label[for="slide4"] {
+                background: #333;
+            }
+        </style>
+        <div id="slider">
+            <input checked="" type="radio" name="slider" id="slide1" selected="false">
+            <input type="radio" name="slider" id="slide2" selected="false">
+            <input type="radio" name="slider" id="slide3" selected="false">
+            <input type="radio" name="slider" id="slide4" selected="false">
+            <div id="slides">
+                <div id="overflow">
+                    <div class="inner">
+                        <img src="./app/resources/images/rock.jpg">
+                        <img src="./app/resources/images/grooves.jpg">
+                        <img src="./app/resources/images/arch.jpg">
+                        <img src="./app/resources/images/sunset.jpg">
+                    </div> <!-- .inner -->
+                </div> <!-- #overflow -->
+            </div>
+            <label for="slide1"></label>
+            <label for="slide2"></label>
+            <label for="slide3"></label>
+            <label for="slide4"></label>
+        </div>
+    </div>
+</template>
+
+<!-- polyfill version-->
+<video-container></video-container>
+<br>
+<!--<image-slider></image-slider>-->
+
+<!--Polymer Version-->
+<img-slider>
+    <img src="./app/resources/images/angular.jpg">
+    <img src="./app/resources/images/reactjs.png">
+    <img src="./app/resources/images/ember.png">
+    <img src="./app/resources/images/ionic.png">
+</img-slider>
+
+<script type="text/javascript" src="dist/bundle.js" charset="utf-8"></script>
+</body>
 </html>
